--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Media queries inside your styled component.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo no script found!"
   },
   "repository": {
     "type": "git",
